--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-blog-backend",
+  "name": "react-express-node-mongodb",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
